# gi

./: .gitignore  debug.bat  run.sh
build_win32/: CMakeLists.txt
gi.xcodeproj/: project.pbxproj
glsl/: isect.glsl  trace.frag  trace.glsl  trace.vert
opencl-xcode/: glfw.c  xxCl.c  xxCommon.c  xxCommon.h
src/: cl.c  cl.h  common.c  common.h  gl.c  gl.h  glfw.c  glfw.h  glsl_preproc.c  glsl_preproc.h  hashmap.c  hashmap.h  isect.c  isect.h  main.c  obj.c  obj.h  parseobj.c  scene.h  timer.c  timer.h  vec.h  xxCl.c  xxCommon.c  xxCommon.h  xxGl.c  xxGl.h  xxParseObj.c  xxParseObj.h
